Fixed a few things for validation and changed sub header text to white for readability.

--- a/css/support.css
+++ b/css/support.css
@@ -90,7 +90,7 @@ h6, .h6 {
 }
 .hdescription {
   font-size: 20px;
-  color: #999;
+  color: white;
 }
 
 
